<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kadabengaran.storyapp.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="reFetch"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_postStory"
        android:name="com.kadabengaran.storyapp.view.post.PostStoryFragment"
        android:label="@string/title_post_story"
        tools:layout="@layout/fragment_post_story">
        <action
            android:id="@+id/action_postStoryFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kadabengaran.storyapp.view.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_loginActivity"
            app:destination="@id/loginActivity"
            app:popUpTo="@id/loginActivity" />
        <action
            android:id="@+id/action_navigation_profile_to_settingDialogFragment"
            app:destination="@id/settingDialogFragment" />

    </fragment>
    <activity
        android:id="@+id/loginActivity"
        android:name="com.kadabengaran.storyapp.view.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <dialog
        android:id="@+id/settingDialogFragment"
        android:name="com.kadabengaran.storyapp.view.profile.SettingDialogFragment"
        android:label="fragment_setting_dialog"
        tools:layout="@layout/fragment_setting_dialog" />
    <fragment
        android:id="@+id/navigation_storyMap"
        android:name="com.kadabengaran.storyapp.view.mapStory.StoryMapsFragment"
        android:label="Explore"
        tools:layout="@layout/fragment_story_maps" />

</navigation>